WB-258: refactored booking status changes to own service and controller