@@ -1,37 +1,21 @@
 package org.scouts105bentaya.features.booking.dto.in;
 
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Positive;
+import jakarta.annotation.Nullable;
+import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
 import org.hibernate.validator.constraints.Length;
-import org.scouts105bentaya.features.booking.enums.BookingStatus;
 
+@Getter
 @Setter
 public class BookingStatusUpdateDto {
 
-    @Getter
-    @NotNull
-    @Positive
-    private Integer id;
-
-    @Getter
-    @NotNull
-    private BookingStatus newStatus;
-
-    @Getter
-    private Boolean exclusive;
-
+    @Getter(AccessLevel.NONE)
     @Length(max = 2047)
     private String observations;
 
-    @Getter
-    private Float price;
-
-    public String getObservations() {
-        if (observations != null && observations.isBlank()) {
-            return null;
-        }
-        return observations;
+    public @Nullable String getObservations() {
+        return StringUtils.isBlank(observations) ? null : observations;
     }
 }
